--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, I recently obtained my PhD from <a href="http://www.bu.edu/math/">Boston University</a>, and will soon be starting at <a href="https://www.vu.nl/en/">VU Amsterdam</a>.
-Previously I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
+I am Alex, I'm a PostDoc in mathematics at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, working in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
+I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
-My PhD supervisor was <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
