--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Alex J. Best's homepage
 <p>
 I am Alex, I'm a PostDoc in mathematics at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, working in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
-I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
+I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and the formalization of mathematics currently.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
@@ -139,8 +139,10 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4><a href="teaching/" style="color:white">My Teaching Page</a></h4>
 </div>
 <div class="panel-body">
-Current: None<br />
 Past:
+<h5><a href="https://elo.mastermath.nl/course/info.php?id=715"><b>Modular Forms (Mastermath 2022) (TA and occasional lecturer)</b></a></h5>
+<h5><b>Project course: Computer Assisted Proofs (VU 2022) (Lecturer)</b></h5>
+<h5><b>Basic Concepts in Mathematics (VU 2021) (TA)</b></h5>
 <h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA)</b></h5>
 <h5><a href="teaching/ma123s117/"><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></a></h5>
 <h5><b>EK102 Linear Algebra (BU Spring 2017) (TA)</b></h5>
