--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: null
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" />
 
 <title>
 Alex J. Best's homepage
@@ -12,7 +12,7 @@ Alex J. Best's homepage
 
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="css/stackicons-social.css" />
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 <!-- https://github.com/jpswalsh/academicons !!!!!!! -->
 
 <script>
@@ -39,7 +39,8 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, I'm a PostDoc in mathematics at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, working in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
+I am Alex, I'm a Heilbronn Research Fellow at <a href="https://www.kcl.ac.uk/mathematics">KCL</a>.
+Previously I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and the formalization of mathematics currently.<br />
 Here is a picture of me.<br />
