--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
             {% if publ.preprint %}<a href="{{publ.preprint}}">(preprint)</a>{% endif %} 
             {% if publ.doi %}doi:<a href="https://doi.org/{{ publ.doi }}">{{publ.doi}}</a>
             {% endif %}
-            {% if publ.errata %}doi:<a href="{{ publ.errata }}">(errata)</a>
+            {% if publ.errata %}<a href="{{ publ.errata }}">(errata)</a>
             {% endif %}
         </li>
         {% endfor %}
