--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, I'm a Heilbronn Research Fellow at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
+I am Alex, I'm a <a href="https://heilbronn.ac.uk/about/">Heilbronn Research Fellow</a> at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
 Previously I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and the formalization of mathematics currently.<br />
