--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
             {% if publ.journal %}{% unless publ.published %}to appear{% endunless %} {{publ.journal}},{% endif %} 
             <a knowl="papers/{{publ.id}}-abstract.html">(abstract)</a> 
             {% if publ.arxiv %}<a href="https://arxiv.org/abs/{{publ.arxiv}}">(arXiv)</a>{% endif %} 
+            {% if publ.pdf %}<a href="{{publ.pdf}}">(pdf)</a>{% endif %} 
             {% if publ.preprint %}<a href="{{publ.preprint}}">(preprint)</a>{% endif %} 
             {% if publ.doi %}doi:<a href="https://doi.org/{{ publ.doi }}">{{publ.doi}}</a>
             {% endif %}
