--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </p>
 </div>
 <div class="col-sm-3">
-<img src="img/me2017.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
+<img src="img/me2023.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me in action, credit to Barinder Banwait">
 </div>
 </div>
 </div>
