--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Seminars</h4>
 </div>
 <div class="panel-body">
+    I organised the Heilbronn show and tell seminar in Spring 2023, please contact me if you would like further information.
+
     I ran the <a href="buntes/index.html">BUNTES learning seminar in Spring 2020</a>: the topic was Abhyankar's conjecture.
 </div>
 </div>
