--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, I'm a <a href="https://heilbronn.ac.uk/about/">Heilbronn Research Fellow</a> at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
+I am Alex, I'm a researcher interested in (formalization of) mathematics, computer science and machine learning.  <br />
+
+Previously I was a <a href="https://heilbronn.ac.uk/about/">Heilbronn Research Fellow</a> at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
 Previously I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="https://en.wikipedia.org/wiki/MPIR_(mathematics_software)">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
-I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and computer proof assistants / the formalization of mathematics currently.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
@@ -57,11 +58,12 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <div class="container">
 <div class="row">
 
+<!--
 <div class="panel panel-primary">
 <div class="panel-heading">
 <h4>News</h4>
 </div>
-<div class="panel-body">
+	<div class="panel-body">
     <ul class="list-group list-group-flush">
         {% for news in site.data.news %}
         <li class="list-group-item">
@@ -70,7 +72,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
         {% endfor %}
     </ul>
 </div>
-</div>
+</div>-->
 
 <div class="panel panel-primary">
 <div class="panel-heading">
