--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Alex J. Best's homepage
 I am Alex, I'm a researcher interested in (formalization of) mathematics, computer science and machine learning.  <br />
 
 Previously I was a <a href="https://heilbronn.ac.uk/about/">Heilbronn Research Fellow</a> at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
-Previously I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
+Before that I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="https://en.wikipedia.org/wiki/MPIR_(mathematics_software)">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
