--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ Alex J. Best's homepage
 </script>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
-<link href="https://aimath.org/knowlstyle.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="https://aimath.org/knowl.js"></script>
+<link href="https://pretextbook.org/examples/showcase/html/_static/pretext/css/knowls_default.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="https://pretextbook.org/examples/showcase/html/_static/pretext/js/lib/knowl.js"></script>
 
 
 </head>
