--- a/papers/computing-modular-forms-abstract.html
+++ b/papers/computing-modular-forms-abstract.html
@@ -1,1 +1,2 @@
-We discuss practical and some theoretical aspects of computing a database of classical modular forms in the $L$-functions and Modular Forms Database (LMFDB). 
+<p>
+We discuss practical and some theoretical aspects of computing a database of classical modular forms in the $L$-functions and Modular Forms Database (LMFDB). </p>
