--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ Alex J. Best's homepage
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="css/stackicons-social.css" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-<!-- https://github.com/jpswalsh/academicons !!!!!!! -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -41,6 +40,7 @@ Alex J. Best's homepage
 <p>
 I am Alex, I'm a researcher interested in (formalization of) mathematics, computer science and machine learning.  <br />
 
+I currently work at <a href="https://harmonic.fun/">Harmonic</a>, applying machine learning and formal methods to develop and scale AI systems that can reason and learn without depending on human generated data.
 Previously I was a <a href="https://heilbronn.ac.uk/about/">Heilbronn Research Fellow</a> at <a href="https://www.kcl.ac.uk/mathematics">King's College London</a>.
 Before that I worked at <a href="https://www.vu.nl/en/">VU Amsterdam</a>, in the group of <a href="https://www.few.vu.nl/~sdn249/">Sander Dahmen</a>.
 I got my PhD from <a href="http://www.bu.edu/math/">Boston University</a> (working with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>), and before that I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="https://en.wikipedia.org/wiki/MPIR_(mathematics_software)">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
@@ -107,7 +107,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Seminars</h4>
 </div>
 <div class="panel-body">
-    I organised the Heilbronn show and tell seminar in Spring 2023, please contact me if you would like further information.<br />
+    I organised the Heilbronn show and tell seminar in Spring 2023.<br />
     I ran the <a href="buntes/index.html">BUNTES learning seminar in Spring 2020</a>: the topic was Abhyankar's conjecture.
 </div>
 </div>
